# verified-pqc-verifier

./: .gitignore  CITATION.cff  README.md  pyproject.toml
cli/: verifiedpqc_verify.py
docs/: build.md  verification_contract.md
examples/: sample_artifact.txt  sample_attestation.json
public_material/: issuer_trust_anchor.json
public_material/verified_pqc_export_bundle/: certificate.json  driver.c  expected.txt  kernel.c  kernel.h  provenance.json
scripts/: build_dsa_open_cli.sh  build_release_artifacts.sh  smoke_release_artifacts.sh  verify_all.sh  verify_negative_cases.sh
verifier/: __init__.py  cab.py  models.py  trust_anchor.py  verify.py  version.py
