[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-pqc-verifier"
version = "0.2.0"
description = "Standalone offline verifier for VerifiedPQC attestation packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.11,<3"]

[project.urls]
Homepage = "https://github.com/Abraxas1010/verified-pqc-verifier"
Repository = "https://github.com/Abraxas1010/verified-pqc-verifier"

[project.scripts]
verifiedpqc-verify = "cli.verifiedpqc_verify:main"

[tool.setuptools]
packages = ["verifier", "cli"]
